Verif/Test/Invalide/test_erreur_3.96-4.deca
// Description:
//    Programme soulevant l'erreur (3.96)
// Resultats:
//    Erreur contextuelle
//    Ligne 20 : Nombre de paramètres incorrect (règle 3.96)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 20/01/2012

class A {
   void x( int a) {
   }
}

int var;
A a;
{
   var = a.x();
}